# a2retronet

./: CMakeLists.txt  HANDOFF.md  README.md  board.c  build.sh  config.c  diskio.c  getting-started.md  hdd.c  hdd.h  main.c  sp.c  tusb_config.h
6502/: SMARTPORT.ROM.S  SSC.CN00.S  SSC.S
fatfs/source/: ffconf.h
